netxms_2.2.1/src/libnxsl/parser.output
State 374 conflicts: 1 shift/reduce


Grammar

    0 $accept: Script $end

    1 Script: Module
    2       | Expression
    3       | %empty

    4 Module: ModuleComponent Module
    5       | ModuleComponent

    6 ModuleComponent: ConstStatement
    7                | Function
    8                | StatementOrBlock
    9                | UseStatement

   10 ConstStatement: T_CONST ConstList ';'

   11 ConstList: ConstDefinition ',' ConstList
   12          | ConstDefinition

   13 ConstDefinition: T_IDENTIFIER '=' Constant

   14 UseStatement: T_USE AnyIdentifier ';'

   15 AnyIdentifier: T_IDENTIFIER
   16              | T_COMPOUND_IDENTIFIER

   17 $@1: %empty

   18 Function: T_SUB FunctionName $@1 ParameterDeclaration Block

   19 ParameterDeclaration: IdentifierList ')'
   20                     | ')'

   21 $@2: %empty

   22 IdentifierList: T_IDENTIFIER $@2 ',' IdentifierList
   23               | T_IDENTIFIER

   24 Block: '{' StatementList '}'

   25 StatementList: StatementOrBlock StatementList
   26              | %empty

   27 StatementOrBlock: Statement
   28                 | Block
   29                 | TryCatchBlock

   30 $@3: %empty

   31 $@4: %empty

   32 TryCatchBlock: T_TRY $@3 Block T_CATCH $@4 Block

   33 Statement: Expression ';'
   34          | BuiltinStatement
   35          | ';'

   36 Expression: '(' Expression ')'
   37           | T_IDENTIFIER '=' Expression

   38 $@5: %empty

   39 Expression: T_IDENTIFIER T_ASSIGN_ADD $@5 Expression

   40 $@6: %empty

   41 Expression: T_IDENTIFIER T_ASSIGN_SUB $@6 Expression

   42 $@7: %empty

   43 Expression: T_IDENTIFIER T_ASSIGN_MUL $@7 Expression

   44 $@8: %empty

   45 Expression: T_IDENTIFIER T_ASSIGN_DIV $@8 Expression

   46 $@9: %empty

   47 Expression: T_IDENTIFIER T_ASSIGN_REM $@9 Expression

   48 $@10: %empty

   49 Expression: T_IDENTIFIER T_ASSIGN_CONCAT $@10 Expression

   50 $@11: %empty

   51 Expression: T_IDENTIFIER T_ASSIGN_AND $@11 Expression

   52 $@12: %empty

   53 Expression: T_IDENTIFIER T_ASSIGN_OR $@12 Expression

   54 $@13: %empty

   55 Expression: T_IDENTIFIER T_ASSIGN_XOR $@13 Expression

   56 $@14: %empty

   57 Expression: StorageItem T_ASSIGN_ADD $@14 Expression

   58 $@15: %empty

   59 Expression: StorageItem T_ASSIGN_SUB $@15 Expression

   60 $@16: %empty

   61 Expression: StorageItem T_ASSIGN_MUL $@16 Expression

   62 $@17: %empty

   63 Expression: StorageItem T_ASSIGN_DIV $@17 Expression

   64 $@18: %empty

   65 Expression: StorageItem T_ASSIGN_REM $@18 Expression

   66 $@19: %empty

   67 Expression: StorageItem T_ASSIGN_CONCAT $@19 Expression

   68 $@20: %empty

   69 Expression: StorageItem T_ASSIGN_AND $@20 Expression

   70 $@21: %empty

   71 Expression: StorageItem T_ASSIGN_OR $@21 Expression

   72 $@22: %empty

   73 Expression: StorageItem T_ASSIGN_XOR $@22 Expression
   74           | Expression '[' Expression ']' '=' Expression

   75 $@23: %empty

   76 Expression: Expression '[' Expression ']' T_ASSIGN_ADD $@23 Expression

   77 $@24: %empty

   78 Expression: Expression '[' Expression ']' T_ASSIGN_SUB $@24 Expression

   79 $@25: %empty

   80 Expression: Expression '[' Expression ']' T_ASSIGN_MUL $@25 Expression

   81 $@26: %empty

   82 Expression: Expression '[' Expression ']' T_ASSIGN_DIV $@26 Expression

   83 $@27: %empty

   84 Expression: Expression '[' Expression ']' T_ASSIGN_CONCAT $@27 Expression

   85 $@28: %empty

   86 Expression: Expression '[' Expression ']' T_ASSIGN_AND $@28 Expression

   87 $@29: %empty

   88 Expression: Expression '[' Expression ']' T_ASSIGN_OR $@29 Expression

   89 $@30: %empty

   90 Expression: Expression '[' Expression ']' T_ASSIGN_XOR $@30 Expression
   91           | Expression '[' Expression ']'
   92           | StorageItem '=' Expression
   93           | StorageItem
   94           | Expression T_REF T_IDENTIFIER '=' Expression
   95           | Expression T_REF T_IDENTIFIER
   96           | Expression T_REF FunctionName ParameterList ')'
   97           | Expression T_REF FunctionName ')'
   98           | T_IDENTIFIER '@' Expression
   99           | '-' Expression
  100           | '!' Expression
  101           | '~' Expression
  102           | T_INC T_IDENTIFIER
  103           | T_DEC T_IDENTIFIER
  104           | T_IDENTIFIER T_INC
  105           | T_IDENTIFIER T_DEC
  106           | T_INC StorageItem
  107           | T_DEC StorageItem
  108           | StorageItem T_INC
  109           | StorageItem T_DEC
  110           | T_INC '(' Expression '[' Expression ']' ')'
  111           | T_DEC '(' Expression '[' Expression ']' ')'
  112           | Expression '[' Expression ']' T_INC
  113           | Expression '[' Expression ']' T_DEC
  114           | Expression '+' Expression
  115           | Expression '-' Expression
  116           | Expression '*' Expression
  117           | Expression '/' Expression
  118           | Expression '%' Expression
  119           | Expression T_LIKE Expression
  120           | Expression T_ILIKE Expression
  121           | Expression T_MATCH Expression
  122           | Expression T_IMATCH Expression
  123           | Expression T_EQ Expression
  124           | Expression T_NE Expression
  125           | Expression '<' Expression
  126           | Expression T_LE Expression
  127           | Expression '>' Expression
  128           | Expression T_GE Expression
  129           | Expression '&' Expression
  130           | Expression '|' Expression
  131           | Expression '^' Expression

  132 $@31: %empty

  133 Expression: Expression T_AND $@31 Expression

  134 $@32: %empty

  135 Expression: Expression T_OR $@32 Expression
  136           | Expression T_LSHIFT Expression
  137           | Expression T_RSHIFT Expression
  138           | Expression '.' Expression

  139 $@33: %empty

  140 $@34: %empty

  141 Expression: Expression '?' $@33 Expression ':' $@34 Expression
  142           | Operand

  143 Operand: FunctionCall
  144        | TypeCast
  145        | ArrayInitializer
  146        | HashMapInitializer
  147        | New
  148        | T_IDENTIFIER
  149        | T_COMPOUND_IDENTIFIER
  150        | Constant

  151 TypeCast: BuiltinType '(' Expression ')'

  152 $@35: %empty

  153 ArrayInitializer: '%' '(' $@35 ArrayElements ')'
  154                 | '%' '(' ')'

  155 $@36: %empty

  156 ArrayElements: Expression $@36 ',' ArrayElements
  157              | Expression

  158 $@37: %empty

  159 HashMapInitializer: '%' '{' $@37 HashMapElements '}'
  160                   | '%' '{' '}'

  161 HashMapElements: HashMapElement ',' HashMapElements
  162                | HashMapElement

  163 HashMapElement: Expression ':' Expression

  164 BuiltinType: T_TYPE_INT32
  165            | T_TYPE_INT64
  166            | T_TYPE_UINT32
  167            | T_TYPE_UINT64
  168            | T_TYPE_REAL
  169            | T_TYPE_STRING

  170 BuiltinStatement: SimpleStatement ';'
  171                 | PrintlnStatement
  172                 | IfStatement
  173                 | DoStatement
  174                 | WhileStatement
  175                 | ForStatement
  176                 | ForEachStatement
  177                 | SwitchStatement
  178                 | SelectStatement
  179                 | ArrayStatement
  180                 | GlobalStatement
  181                 | T_BREAK ';'
  182                 | T_CONTINUE ';'

  183 SimpleStatement: SimpleStatementKeyword Expression
  184                | SimpleStatementKeyword

  185 SimpleStatementKeyword: T_ABORT
  186                       | T_EXIT
  187                       | T_RETURN
  188                       | T_PRINT

  189 PrintlnStatement: T_PRINTLN Expression ';'
  190                 | T_PRINTLN ';'

  191 $@38: %empty

  192 IfStatement: T_IF '(' Expression ')' $@38 IfBody

  193 IfBody: StatementOrBlock
  194       | StatementOrBlock ElseStatement

  195 $@39: %empty

  196 ElseStatement: T_ELSE $@39 StatementOrBlock

  197 $@40: %empty

  198 $@41: %empty

  199 $@42: %empty

  200 ForStatement: T_FOR '(' Expression ';' $@40 Expression ';' $@41 Expression ')' $@42 StatementOrBlock

  201 ForEachStatement: ForEach ForEachBody

  202 ForEach: T_FOREACH '(' T_IDENTIFIER ':'
  203        | T_FOR '(' T_IDENTIFIER ':'

  204 $@43: %empty

  205 ForEachBody: Expression ')' $@43 StatementOrBlock

  206 $@44: %empty

  207 $@45: %empty

  208 WhileStatement: T_WHILE $@44 '(' Expression ')' $@45 StatementOrBlock

  209 $@46: %empty

  210 DoStatement: T_DO $@46 StatementOrBlock T_WHILE '(' Expression ')' ';'

  211 $@47: %empty

  212 SwitchStatement: T_SWITCH $@47 '(' Expression ')' '{' CaseList Default '}'

  213 $@48: %empty

  214 CaseList: Case $@48 CaseList
  215         | Case

  216 $@49: %empty

  217 Case: T_CASE Constant $@49 ':' StatementList

  218 $@50: %empty

  219 Case: T_CASE T_IDENTIFIER $@50 ':' StatementList

  220 Default: T_DEFAULT ':' StatementList
  221        | %empty

  222 $@51: %empty

  223 SelectStatement: T_SELECT $@51 T_IDENTIFIER SelectOptions '{' SelectList '}'

  224 SelectOptions: '(' Expression ')'
  225              | %empty

  226 SelectList: SelectEntry SelectList
  227           | SelectEntry

  228 $@52: %empty

  229 $@53: %empty

  230 SelectEntry: T_WHEN $@52 Expression $@53 ':' StatementList

  231 $@54: %empty

  232 ArrayStatement: T_ARRAY $@54 IdentifierList ';'

  233 $@55: %empty

  234 ArrayStatement: T_GLOBAL T_ARRAY $@55 IdentifierList ';'

  235 GlobalStatement: T_GLOBAL GlobalVariableList ';'

  236 GlobalVariableList: GlobalVariableDeclaration ',' GlobalVariableList
  237                   | GlobalVariableDeclaration

  238 GlobalVariableDeclaration: T_IDENTIFIER
  239                          | T_IDENTIFIER '=' Expression

  240 New: T_NEW T_IDENTIFIER
  241    | T_NEW T_IDENTIFIER '(' ParameterList ')'
  242    | T_NEW T_IDENTIFIER '(' ')'

  243 FunctionCall: FunctionName ParameterList ')'
  244             | FunctionName ')'

  245 ParameterList: Parameter ',' ParameterList
  246              | Parameter

  247 Parameter: Expression
  248          | T_IDENTIFIER ':' Expression

  249 FunctionName: T_IDENTIFIER '('

  250 StorageItem: '#' T_IDENTIFIER
  251            | '#' '(' Expression ')'

  252 Constant: T_STRING
  253         | T_INT32
  254         | T_UINT32
  255         | T_INT64
  256         | T_UINT64
  257         | T_REAL
  258         | T_TRUE
  259         | T_FALSE
  260         | T_NULL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 100
'#' (35) 250 251
'%' (37) 118 153 154 159 160
'&' (38) 129
'(' (40) 36 110 111 151 153 154 192 200 202 203 208 210 212 224 241
    242 249 251
')' (41) 19 20 36 96 97 110 111 151 153 154 192 200 205 208 210 212
    224 241 242 243 244 251
'*' (42) 116
'+' (43) 114
',' (44) 11 22 156 161 236 245
'-' (45) 99 115
'.' (46) 138
'/' (47) 117
':' (58) 141 163 202 203 217 219 220 230 248
';' (59) 10 14 33 35 170 181 182 189 190 200 210 232 234 235
'<' (60) 125
'=' (61) 13 37 74 92 94 239
'>' (62) 127
'?' (63) 141
'@' (64) 98
'[' (91) 74 76 78 80 82 84 86 88 90 91 110 111 112 113
']' (93) 74 76 78 80 82 84 86 88 90 91 110 111 112 113
'^' (94) 131
'{' (123) 24 159 160 212 223
'|' (124) 130
'}' (125) 24 159 160 212 223
'~' (126) 101
error (256)
T_ABORT (258) 185
T_ARRAY (259) 232 234
T_BREAK (260) 181
T_CASE (261) 217 219
T_CATCH (262) 32
T_CONST (263) 10
T_CONTINUE (264) 182
T_DEFAULT (265) 220
T_DO (266) 210
T_ELSE (267) 196
T_EXIT (268) 186
T_FALSE (269) 259
T_FOR (270) 200 203
T_FOREACH (271) 202
T_GLOBAL (272) 234 235
T_IF (273) 192
T_NEW (274) 240 241 242
T_NULL (275) 260
T_PRINT (276) 188
T_PRINTLN (277) 189 190
T_RETURN (278) 187
T_SELECT (279) 223
T_SUB (280) 18
T_SWITCH (281) 212
T_TRUE (282) 258
T_TRY (283) 32
T_TYPE_INT32 (284) 164
T_TYPE_INT64 (285) 165
T_TYPE_REAL (286) 168
T_TYPE_STRING (287) 169
T_TYPE_UINT32 (288) 166
T_TYPE_UINT64 (289) 167
T_USE (290) 14
T_WHEN (291) 230
T_WHILE (292) 208 210
T_COMPOUND_IDENTIFIER (293) 16 149
T_IDENTIFIER (294) 13 15 22 23 37 39 41 43 45 47 49 51 53 55 94 95
    98 102 103 104 105 148 202 203 219 223 238 239 240 241 242 248
    249 250
T_STRING (295) 252
T_INT32 (296) 253
T_UINT32 (297) 254
T_INT64 (298) 255
T_UINT64 (299) 256
T_REAL (300) 257
T_ASSIGN_ADD (301) 39 57 76
T_ASSIGN_SUB (302) 41 59 78
T_ASSIGN_MUL (303) 43 61 80
T_ASSIGN_DIV (304) 45 63 82
T_ASSIGN_REM (305) 47 65
T_ASSIGN_CONCAT (306) 49 67 84
T_ASSIGN_AND (307) 51 69 86
T_ASSIGN_OR (308) 53 71 88
T_ASSIGN_XOR (309) 55 73 90
T_OR (310) 135
T_AND (311) 133
T_NE (312) 124
T_EQ (313) 123
T_LIKE (314) 119
T_ILIKE (315) 120
T_MATCH (316) 121
T_IMATCH (317) 122
T_LE (318) 126
T_GE (319) 128
T_LSHIFT (320) 136
T_RSHIFT (321) 137
T_INC (322) 102 104 106 108 110 112
T_DEC (323) 103 105 107 109 111 113
NEGATE (324)
T_REF (325) 94 95 96 97
T_POST_INC (326)
T_POST_DEC (327)


Nonterminals, with rules where they appear

$accept (99)
    on left: 0
Script (100)
    on left: 1 2 3, on right: 0
Module (101)
    on left: 4 5, on right: 1 4
ModuleComponent (102)
    on left: 6 7 8 9, on right: 4 5
ConstStatement (103)
    on left: 10, on right: 6
ConstList (104)
    on left: 11 12, on right: 10 11
ConstDefinition (105)
    on left: 13, on right: 11 12
UseStatement (106)
    on left: 14, on right: 9
AnyIdentifier (107)
    on left: 15 16, on right: 14
Function (108)
    on left: 18, on right: 7
$@1 (109)
    on left: 17, on right: 18
ParameterDeclaration (110)
    on left: 19 20, on right: 18
IdentifierList (111)
    on left: 22 23, on right: 19 22 232 234
$@2 (112)
    on left: 21, on right: 22
Block (113)
    on left: 24, on right: 18 28 32
StatementList (114)
    on left: 25 26, on right: 24 25 217 219 220 230
StatementOrBlock (115)
    on left: 27 28 29, on right: 8 25 193 194 196 200 205 208 210
TryCatchBlock (116)
    on left: 32, on right: 29
$@3 (117)
    on left: 30, on right: 32
$@4 (118)
    on left: 31, on right: 32
Statement (119)
    on left: 33 34 35, on right: 27
Expression (120)
    on left: 36 37 39 41 43 45 47 49 51 53 55 57 59 61 63 65 67 69
    71 73 74 76 78 80 82 84 86 88 90 91 92 93 94 95 96 97 98 99 100
    101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116
    117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 133
    135 136 137 138 141 142, on right: 2 33 36 37 39 41 43 45 47 49
    51 53 55 57 59 61 63 65 67 69 71 73 74 76 78 80 82 84 86 88 90
    91 92 94 95 96 97 98 99 100 101 110 111 112 113 114 115 116 117
    118 119 120 121 122 123 124 125 126 127 128 129 130 131 133 135
    136 137 138 141 151 156 157 163 183 189 192 200 205 208 210 212
    224 230 239 247 248 251
$@5 (121)
    on left: 38, on right: 39
$@6 (122)
    on left: 40, on right: 41
$@7 (123)
    on left: 42, on right: 43
$@8 (124)
    on left: 44, on right: 45
$@9 (125)
    on left: 46, on right: 47
$@10 (126)
    on left: 48, on right: 49
$@11 (127)
    on left: 50, on right: 51
$@12 (128)
    on left: 52, on right: 53
$@13 (129)
    on left: 54, on right: 55
$@14 (130)
    on left: 56, on right: 57
$@15 (131)
    on left: 58, on right: 59
$@16 (132)
    on left: 60, on right: 61
$@17 (133)
    on left: 62, on right: 63
$@18 (134)
    on left: 64, on right: 65
$@19 (135)
    on left: 66, on right: 67
$@20 (136)
    on left: 68, on right: 69
$@21 (137)
    on left: 70, on right: 71
$@22 (138)
    on left: 72, on right: 73
$@23 (139)
    on left: 75, on right: 76
$@24 (140)
    on left: 77, on right: 78
$@25 (141)
    on left: 79, on right: 80
$@26 (142)
    on left: 81, on right: 82
$@27 (143)
    on left: 83, on right: 84
$@28 (144)
    on left: 85, on right: 86
$@29 (145)
    on left: 87, on right: 88
$@30 (146)
    on left: 89, on right: 90
$@31 (147)
    on left: 132, on right: 133
$@32 (148)
    on left: 134, on right: 135
$@33 (149)
    on left: 139, on right: 141
$@34 (150)
    on left: 140, on right: 141
Operand (151)
    on left: 143 144 145 146 147 148 149 150, on right: 142
TypeCast (152)
    on left: 151, on right: 144
ArrayInitializer (153)
    on left: 153 154, on right: 145
$@35 (154)
    on left: 152, on right: 153
ArrayElements (155)
    on left: 156 157, on right: 153 156
$@36 (156)
    on left: 155, on right: 156
HashMapInitializer (157)
    on left: 159 160, on right: 146
$@37 (158)
    on left: 158, on right: 159
HashMapElements (159)
    on left: 161 162, on right: 159 161
HashMapElement (160)
    on left: 163, on right: 161 162
BuiltinType (161)
    on left: 164 165 166 167 168 169, on right: 151
BuiltinStatement (162)
    on left: 170 171 172 173 174 175 176 177 178 179 180 181 182, on right:
    34
SimpleStatement (163)
    on left: 183 184, on right: 170
SimpleStatementKeyword (164)
    on left: 185 186 187 188, on right: 183 184
PrintlnStatement (165)
    on left: 189 190, on right: 171
IfStatement (166)
    on left: 192, on right: 172
$@38 (167)
    on left: 191, on right: 192
IfBody (168)
    on left: 193 194, on right: 192
ElseStatement (169)
    on left: 196, on right: 194
$@39 (170)
    on left: 195, on right: 196
ForStatement (171)
    on left: 200, on right: 175
$@40 (172)
    on left: 197, on right: 200
$@41 (173)
    on left: 198, on right: 200
$@42 (174)
    on left: 199, on right: 200
ForEachStatement (175)
    on left: 201, on right: 176
ForEach (176)
    on left: 202 203, on right: 201
ForEachBody (177)
    on left: 205, on right: 201
$@43 (178)
    on left: 204, on right: 205
WhileStatement (179)
    on left: 208, on right: 174
$@44 (180)
    on left: 206, on right: 208
$@45 (181)
    on left: 207, on right: 208
DoStatement (182)
    on left: 210, on right: 173
$@46 (183)
    on left: 209, on right: 210
SwitchStatement (184)
    on left: 212, on right: 177
$@47 (185)
    on left: 211, on right: 212
CaseList (186)
    on left: 214 215, on right: 212 214
$@48 (187)
    on left: 213, on right: 214
Case (188)
    on left: 217 219, on right: 214 215
$@49 (189)
    on left: 216, on right: 217
$@50 (190)
    on left: 218, on right: 219
Default (191)
    on left: 220 221, on right: 212
SelectStatement (192)
    on left: 223, on right: 178
$@51 (193)
    on left: 222, on right: 223
SelectOptions (194)
    on left: 224 225, on right: 223
SelectList (195)
    on left: 226 227, on right: 223 226
SelectEntry (196)
    on left: 230, on right: 226 227
$@52 (197)
    on left: 228, on right: 230
$@53 (198)
    on left: 229, on right: 230
ArrayStatement (199)
    on left: 232 234, on right: 179
$@54 (200)
    on left: 231, on right: 232
$@55 (201)
    on left: 233, on right: 234
GlobalStatement (202)
    on left: 235, on right: 180
GlobalVariableList (203)
    on left: 236 237, on right: 235 236
GlobalVariableDeclaration (204)
    on left: 238 239, on right: 236 237
New (205)
    on left: 240 241 242, on right: 147
FunctionCall (206)
    on left: 243 244, on right: 143
ParameterList (207)
    on left: 245 246, on right: 96 241 243 245
Parameter (208)
    on left: 247 248, on right: 245 246
FunctionName (209)
    on left: 249, on right: 18 96 97 243 244
StorageItem (210)
    on left: 250 251, on right: 57 59 61 63 65 67 69 71 73 92 93 106
    107 108 109
Constant (211)
    on left: 252 253 254 255 256 257 258 259 260, on right: 13 150
    217


State 0

    0 $accept: . Script $end

    T_ABORT                shift, and go to state 1
    T_ARRAY                shift, and go to state 2
    T_BREAK                shift, and go to state 3
    T_CONST                shift, and go to state 4
    T_CONTINUE             shift, and go to state 5
    T_DO                   shift, and go to state 6
    T_EXIT                 shift, and go to state 7
    T_FALSE                shift, and go to state 8
    T_FOR                  shift, and go to state 9
    T_FOREACH              shift, and go to state 10
    T_GLOBAL               shift, and go to state 11
    T_IF                   shift, and go to state 12
    T_NEW                  shift, and go to state 13
    T_NULL                 shift, and go to state 14
    T_PRINT                shift, and go to state 15
    T_PRINTLN              shift, and go to state 16
    T_RETURN               shift, and go to state 17
    T_SELECT               shift, and go to state 18
    T_SUB                  shift, and go to state 19
    T_SWITCH               shift, and go to state 20
    T_TRUE                 shift, and go to state 21
    T_TRY                  shift, and go to state 22
    T_TYPE_INT32           shift, and go to state 23
    T_TYPE_INT64           shift, and go to state 24
    T_TYPE_REAL            shift, and go to state 25
    T_TYPE_STRING          shift, and go to state 26
    T_TYPE_UINT32          shift, and go to state 27
    T_TYPE_UINT64          shift, and go to state 28
    T_USE                  shift, and go to state 29
    T_WHILE                shift, and go to state 30
    T_COMPOUND_IDENTIFIER  shift, and go to state 31
    T_IDENTIFIER           shift, and go to state 32
    T_STRING               shift, and go to state 33
    T_INT32                shift, and go to state 34
    T_UINT32               shift, and go to state 35
    T_INT64                shift, and go to state 36
    T_UINT64               shift, and go to state 37
    T_REAL                 shift, and go to state 38
    '-'                    shift, and go to state 39
    '%'                    shift, and go to state 40
    T_INC                  shift, and go to state 41
    T_DEC                  shift, and go to state 42
    '!'                    shift, and go to state 43
    '~'                    shift, and go to state 44
    ';'                    shift, and go to state 45
    '{'                    shift, and go to state 46
    '('                    shift, and go to state 47
    '#'                    shift, and go to state 48

    $default  reduce using rule 3 (Script)

    Script                  go to state 49
    Module                  go to state 50
    ModuleComponent         go to state 51
    ConstStatement          go to state 52
    UseStatement            go to state 53
    Function                go to state 54
    Block                   go to state 55
    StatementOrBlock        go to state 56
    TryCatchBlock           go to state 57
    Statement               go to state 58
    Expression              go to state 59
    Operand                 go to state 60
    TypeCast                go to state 61
    ArrayInitializer        go to state 62
    HashMapInitializer      go to state 63
    BuiltinType             go to state 64
    BuiltinStatement        go to state 65
    SimpleStatement         go to state 66
    SimpleStatementKeyword  go to state 67
    PrintlnStatement        go to state 68
    IfStatement             go to state 69
    ForStatement            go to state 70
    ForEachStatement        go to state 71
    ForEach                 go to state 72
    WhileStatement          go to state 73
    DoStatement             go to state 74
    SwitchStatement         go to state 75
    SelectStatement         go to state 76
    ArrayStatement          go to state 77
    GlobalStatement         go to state 78
    New                     go to state 79
    FunctionCall            go to state 80
    FunctionName            go to state 81
    StorageItem             go to state 82
    Constant                go to state 83


State 1

  185 SimpleStatementKeyword: T_ABORT .

    $default  reduce using rule 185 (SimpleStatementKeyword)


State 2

  232 ArrayStatement: T_ARRAY . $@54 IdentifierList ';'

    $default  reduce using rule 231 ($@54)

    $@54  go to state 84


State 3

  181 BuiltinStatement: T_BREAK . ';'

    ';'  shift, and go to state 85


State 4

   10 ConstStatement: T_CONST . ConstList ';'

    T_IDENTIFIER  shift, and go to state 86

    ConstList        go to state 87
    ConstDefinition  go to state 88


State 5

  182 BuiltinStatement: T_CONTINUE . ';'

    ';'  shift, and go to state 89


State 6

  210 DoStatement: T_DO . $@46 StatementOrBlock T_WHILE '(' Expression ')' ';'

    $default  reduce using rule 209 ($@46)

    $@46  go to state 90


State 7

  186 SimpleStatementKeyword: T_EXIT .

    $default  reduce using rule 186 (SimpleStatementKeyword)


State 8

  259 Constant: T_FALSE .

    $default  reduce using rule 259 (Constant)


State 9

  200 ForStatement: T_FOR . '(' Expression ';' $@40 Expression ';' $@41 Expression ')' $@42 StatementOrBlock
  203 ForEach: T_FOR . '(' T_IDENTIFIER ':'

    '('  shift, and go to state 91


State 10

  202 ForEach: T_FOREACH . '(' T_IDENTIFIER ':'

    '('  shift, and go to state 92


State 11

  234 ArrayStatement: T_GLOBAL . T_ARRAY $@55 IdentifierList ';'
  235 GlobalStatement: T_GLOBAL . GlobalVariableList ';'

    T_ARRAY       shift, and go to state 93
    T_IDENTIFIER  shift, and go to state 94

    GlobalVariableList         go to state 95
    GlobalVariableDeclaration  go to state 96


State 12

  192 IfStatement: T_IF . '(' Expression ')' $@38 IfBody

    '('  shift, and go to state 97


State 13

  240 New: T_NEW . T_IDENTIFIER
  241    | T_NEW . T_IDENTIFIER '(' ParameterList ')'
  242    | T_NEW . T_IDENTIFIER '(' ')'

    T_IDENTIFIER  shift, and go to state 98


State 14

  260 Constant: T_NULL .

    $default  reduce using rule 260 (Constant)


State 15

  188 SimpleStatementKeyword: T_PRINT .

    $default  reduce using rule 188 (SimpleStatementKeyword)


State 16

  189 PrintlnStatement: T_PRINTLN . Expression ';'
  190                 | T_PRINTLN . ';'

    T_FALSE                shift, and go to state 8
    T_NEW                  shift, and go to state 13
    T_NULL                 shift, and go to state 14
    T_TRUE                 shift, and go to state 21
    T_TYPE_INT32           shift, and go to state 23
    T_TYPE_INT64           shift, and go to state 24
    T_TYPE_REAL            shift, and go to state 25
    T_TYPE_STRING          shift, and go to state 26
    T_TYPE_UINT32          shift, and go to state 27
    T_TYPE_UINT64          shift, and go to state 28
    T_COMPOUND_IDENTIFIER  shift, and go to state 31
    T_IDENTIFIER           shift, and go to state 32
    T_STRING               shift, and go to state 33
    T_INT32                shift, and go to state 34
    T_UINT32               shift, and go to state 35
    T_INT64                shift, and go to state 36
    T_UINT64               shift, and go to state 37
    T_REAL                 shift, and go to state 38
    '-'                    shift, and go to state 39
    '%'                    shift, and go to state 40
    T_INC                  shift, and go to state 41
    T_DEC                  shift, and go to state 42
    '!'                    shift, and go to state 43
    '~'                    shift, and go to state 44
    ';'                    shift, and go to state 99
    '('                    shift, and go to state 47
    '#'                    shift, and go to state 48

    Expression          go to state 100
    Operand             go to state 60
    TypeCast            go to state 61
    ArrayInitializer    go to state 62
    HashMapInitializer  go to state 63
    BuiltinType         go to state 64
    New                 go to state 79
    FunctionCall        go to state 80
    FunctionName        go to state 81
    StorageItem         go to state 82
    Constant            go to state 83


State 17

  187 SimpleStatementKeyword: T_RETURN .

    $default  reduce using rule 187 (SimpleStatementKeyword)


State 18

  223 SelectStatement: T_SELECT . $@51 T_IDENTIFIER SelectOptions '{' SelectList '}'

    $default  reduce using rule 222 ($@51)

    $@51  go to state 101


State 19

   18 Function: T_SUB . FunctionName $@1 ParameterDeclaration Block

    T_IDENTIFIER  shift, and go to state 102

    FunctionName  go to state 103


State 20

  212 SwitchStatement: T_SWITCH . $@47 '(' Expression ')' '{' CaseList Default '}'

    $default  reduce using rule 211 ($@47)

    $@47  go to state 104


State 21

  258 Constant: T_TRUE .

    $default  reduce using rule 258 (Constant)


State 22

   32 TryCatchBlock: T_TRY . $@3 Block T_CATCH $@4 Block

    $default  reduce using rule 30 ($@3)

    $@3  go to state 105


State 23

  164 BuiltinType: T_TYPE_INT32 .

    $default  reduce using rule 164 (BuiltinType)


State 24

  165 BuiltinType: T_TYPE_INT64 .

    $default  reduce using rule 165 (BuiltinType)


State 25

  168 BuiltinType: T_TYPE_REAL .

    $default  reduce using rule 168 (BuiltinType)


State 26

  169 BuiltinType: T_TYPE_STRING .

    $default  reduce using rule 169 (BuiltinType)


State 27

  166 BuiltinType: T_TYPE_UINT32 .

    $default  reduce using rule 166 (BuiltinType)


State 28

  167 BuiltinType: T_TYPE_UINT64 .

    $default  reduce using rule 167 (BuiltinType)


State 29

   14 UseStatement: T_USE . AnyIdentifier ';'

    T_COMPOUND_IDENTIFIER  shift, and go to state 106
    T_IDENTIFIER           shift, and go to state 107

    AnyIdentifier  go to state 108


State 30

  208 WhileStatement: T_WHILE . $@44 '(' Expression ')' $@45 StatementOrBlock

    $default  reduce using rule 206 ($@44)

    $@44  go to state 109


State 31

  149 Operand: T_COMPOUND_IDENTIFIER .

    $default  reduce using rule 149 (Operand)


State 32

   37 Expression: T_IDENTIFIER . '=' Expression
   39           | T_IDENTIFIER . T_ASSIGN_ADD $@5 Expression
   41           | T_IDENTIFIER . T_ASSIGN_SUB $@6 Expression
   43           | T_IDENTIFIER . T_ASSIGN_MUL $@7 Expression
   45           | T_IDENTIFIER . T_ASSIGN_DIV $@8 Expression
   47           | T_IDENTIFIER . T_ASSIGN_REM $@9 Expression
   49           | T_IDENTIFIER . T_ASSIGN_CONCAT $@10 Expression
   51           | T_IDENTIFIER . T_ASSIGN_AND $@11 Expression
   53           | T_IDENTIFIER . T_ASSIGN_OR $@12 Expression
   55           | T_IDENTIFIER . T_ASSIGN_XOR $@13 Expression
   98           | T_IDENTIFIER . '@' Expression
  104           | T_IDENTIFIER . T_INC
  105           | T_IDENTIFIER . T_DEC
  148 Operand: T_IDENTIFIER .
  249 FunctionName: T_IDENTIFIER . '('

    '='              shift, and go to state 110
    T_ASSIGN_ADD     shift, and go to state 111
    T_ASSIGN_SUB     shift, and go to state 112
    T_ASSIGN_MUL     shift, and go to state 113
    T_ASSIGN_DIV     shift, and go to state 114
    T_ASSIGN_REM     shift, and go to state 115
    T_ASSIGN_CONCAT  shift, and go to state 116
    T_ASSIGN_AND     shift, and go to state 117
    T_ASSIGN_OR      shift, and go to state 118
    T_ASSIGN_XOR     shift, and go to state 119
    T_INC            shift, and go to state 120
    T_DEC            shift, and go to state 121
    '@'              shift, and go to state 122
    '('              shift, and go to state 123

    $default  reduce using rule 148 (Operand)


State 33

  252 Constant: T_STRING .

    $default  reduce using rule 252 (Constant)


State 34

  253 Constant: T_INT32 .

    $default  reduce using rule 253 (Constant)


State 35

  254 Constant: T_UINT32 .

    $default  reduce using rule 254 (Constant)


State 36

  255 Constant: T_INT64 .

    $default  reduce using rule 255 (Constant)


State 37

  256 Constant: T_UINT64 .

    $default  reduce using rule 256 (Constant)


State 38

  257 Constant: T_REAL .

    $default  reduce using rule 257 (Constant)


State 39

   99 Expression: '-' . Expression
